--- a/src/components/button/button.module.scss
+++ b/src/components/button/button.module.scss
@@ -4,6 +4,7 @@
   border: none;
   border-radius: 6px;
   height: fit-content;
+  cursor: pointer;
 
   &:focus {
     outline: none;
@@ -11,6 +12,7 @@
 
   &.light {
     border: 1px solid #1919193e;
+    color: black;
   }
 
   &.dark {
