added edit and delete functionality

--- a/src/components/card-modal/card-modal.module.scss
+++ b/src/components/card-modal/card-modal.module.scss
@@ -74,6 +74,11 @@
       gap: 10px;
       justify-content: flex-end;
 
+      .editingActionContainer {
+        display: flex;
+        gap: 10px;
+      }
+
       Button {
         cursor: pointer;
       }
